# efficient-language-detector-py

./: .gitignore  README.md  demo.py  pyproject.toml  setup.py
benchmark/: bench.py
benchmarks/: bench.py  test.py
eld/: __init__.py  languageData.py  languageDetector.py  languageResult.py  languageSubset.py  subsetResult.py
eld/resources/: avg_score.py
eld/resources/ngrams/: ngramsM60.py
eld/resources/ngrams/subset/: ngramsM60-1_2rrx014rx6ypsas6tplo1gtcnmiv5mz.py  ngramsM60-6_5ijqhj4oecs310zqtm8u9pgmd9ox2yd.py
eld/tests/: test_detector.py  test_subset.py
src/eld/: __init__.py  languageData.py  languageDetector.py  languageSubset.py  languagesData.py  languagesSubset.py
src/eld/ngrams/: ngrams_17ba0791499db908433b80f37c5fbc89b870084b.py  ngrams_2f37045c74780aba1d36d6717f3244dc025fb935.py  ngrams_m.py
tests/: test_detector.py  test_subset.py
